<resources>
    <string name="app_name">OCUIParts</string>
    <string name="tutorial_txt_start">はじめる</string>
    <string name="main_txt_point">pt</string>
    <string name="timeline_view_detail">詳細を見る</string>
    <string name="earned_all">すべて</string>
    <string name="earned_incomplete">未完了</string>
    <string name="earned_pending">判定待ち</string>
    <string name="earned_no_all">ポイント獲得はありません</string>
    <string name="earned_no_incomplete">交換済みアイテムはありません</string>
    <string name="earned_no_pending">判定待ちのワークはありません</string>
    <string name="title_timeline">ホーム</string>
    <string name="title_chat">メッセージ一覧</string>
    <string name="title_alert">お知らせ</string>
    <string name="title_my_page">マイページ</string>
    <string name="title_setting">設定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="info">商品情報</string>
    <string name="mr">さん</string>
    <string name="yen">円</string>
    <string name="all">すべて</string>
    <string name="point_get">ポイント獲得</string>
    <string name="point_exchange">ポイント交換</string>
    <string name="btn_point_get_news">ポイントGET</string>
    <string name="point_get_no_link">Access Link Error</string>
    <string name="point_get_coming_soon">Coming soon...</string>
    <string name="timeline_exchange">ポイント交換</string>
    <string name="timeline_get_point">ポイント獲得</string>
    <string name="timeline_more">もっと見る</string>
    <string name="timeline_close">閉じる</string>
    <string name="main_center_job">就活相談・その他</string>
    <string name="main_center_house">お家のこと</string>
    <string name="main_center_title">チャットで相談しよう！</string>
    <string name="exchange_all">すべて</string>
    <string name="exchange_list">リスト</string>
    <string name="exchange_replaced">交換済み</string>
    <string name="alert_search_hint">検索ワードを入力してください</string>
    <string name="exchange_search_hint">@string/earn_search_hint</string>
    <string name="earn_search_hint">検索ワードを入力してください</string>
    <string name="earn_utils">まで</string>
    <string name="price">獲得\n予定</string>
    <string name="btn_answer">回答する</string>
    <string name="btn_capture">撮影する</string>
    <string name="btn_exchange">交換する</string>
    <string name="btn_exchange_get_point">ポイント獲得へ</string>
    <string name="txt_stock_exists">在庫あり</string>
    <string name="txt_exchange_remain">お一人様あたり交換可能回数：あと%1$s回</string>
    <string name="txt_stock_over">ただいま在庫切れです</string>
    <string name="txt_exchange_over">交換可能回数を超えています</string>
    <string name="exchange_no_all">交換アイテムはありません</string>
    <string name="exchange_no_list">お気に入りはまだありません</string>
    <string name="exchange_no_replace">交換済みアイテムはありません</string>
    <string name="txt_exchange_popup_title">ポイントが足りません</string>
    <string name="txt_exchange_popup_content">このアイテムをお気に入りに追加して\nポイントを貯めましょう！</string>
    <string name="txt_exchange_no_favourite">お気に入りに追加</string>
    <string name="txt_exchange_favourite">追加しました</string>
    <string name="txt_exchange_title">アイテムを交換します</string>
    <string name="txt_exchange_my_point">所持ポイント</string>
    <string name="txt_exchange_item_point">使用ポイント</string>
    <string name="txt_exchange_after_point">残高ポイント</string>
    <string name="txt_exchange_code">交換コード</string>
    <string name="txt_history_header_giftee">交換コードのURLからサイトへ進んでください。</string>
    <string name="txt_history_header_not_giftee">対象サイトにて商品コードを入力してください。</string>
    <string name="txt_history_header_exchange_date">交換日:</string>
    <string name="txt_history_header_shipment_date">"発送日:</string>
    <string name="txt_history_header_expired_date">有効期限:</string>
    <string name="job_introduction_favorite">お気に入り</string>
    <string name="job_introduction_apply">応募済み</string>
    <string name="job_introduction_time">まで</string>
    <string name="job_no_content_favorite">お気に入りはまだありません</string>
    <string name="job_no_content_applied">応募済みはまだありません</string>
    <string name="job_intro_filter_area">地域</string>
    <string name="job_intro_filter_category">職種</string>
    <string name="job_detail_wanted_information">募集情報</string>
    <string name="job_detail_salary">給与</string>
    <string name="job_detail_working_hours">勤務時間</string>
    <string name="job_detail_work_location">勤務地</string>
    <string name="job_detail_nearest_location">最寄駅</string>
    <string name="job_detail_applicaion_condition">応募条件</string>
    <string name="job_detail_holiday_vacation">休日・休暇</string>
    <string name="job_detail_treatments_benefits">待遇・福利厚生</string>
    <string name="job_detail_company_profile">会社概要</string>
    <string name="job_detail_company_name">企業名</string>
    <string name="job_detail_capital">資本金</string>
    <string name="job_detail_number_of_employees">従業員数</string>
    <string name="job_detail_established_date">設立年月</string>
    <string name="job_detail_location">所在地</string>
    <string name="job_detail_business_contents">事業内容</string>
    <string name="job_detail_url">URL</string>
    <string name="job_detail_apply_job">応募する</string>
    <string name="job_detail_job_applied">応募済み</string>
    <string name="title_job_consultation">就活相談・その他</string>
    <string name="title_job_detail">イベント</string>
    <string name="title_byte_detail">バイト詳細</string>
    <string name="residents_note_all_note">すべて</string>
    <string name="residents_note_favorite_note">お気に入り</string>
    <string name="residents_note_my_note">自分の投稿</string>
    <string name="text_hint">検索ワードを入力してください</string>
    <string name="comment_text_hint">コメントを書く</string>
    <string name="note_created_time_year_month_day">%1$s.%2$s.%3$s</string>
    <string name="note_created_time_year_month_day_2">%1$s/%2$s/%3$s</string>
    <string name="distance_time_year_month_day">%1$s年%2$s月%3$s日</string>
    <string name="distance_time_month_day">%1$s月%2$s日</string>
    <string name="distance_time_week_ago">1週間前</string>
    <string name="distance_time_day_ago">%1$s日前</string>
    <string name="distance_time_yesterday">昨日</string>
    <string name="distance_time_hour_ago">%1$s時間前</string>
    <string name="distance_time_minute_ago">%1$s分前</string>
    <string name="distance_time_second_ago">%1$s秒前</string>
    <string name="header_list_note">ノート</string>
    <string name="header_list_comment">コメント</string>
    <string name="create_comment_title">コメント作成</string>
    <string name="send_comment">コメントする</string>
    <string name="jobs_part_time">アルバイト</string>
    <string name="jobs_intern">インターン</string>
    <string name="setting_term_of_service">利用規約</string>
    <string name="setting_privacy_policy">プライバシーポリシー</string>
    <string name="setting_faq">よくある質問</string>
    <string name="setting_logout">ログアウト</string>
    <string name="setting_logout_popup_message">ログアウトします。\nよろしいですか？</string>
    <string name="setting_logout_popup_done">ログアウトしました</string>
    <string name="job_consultation_hint">メッセージを入力してください</string>
    <string name="job_consultation_intro">お仕事のご相談にお答えします。\nお気軽に話しかけてください！</string>
    <string name="job_consultation_header_intro">自己紹介</string>
    <string name="job_consultation_send_message">メッセージを送る</string>
    <string name="job_updated_time">更新日:%1$s</string>
    <string name="login_email">メールアドレス</string>
    <string name="login_password">パスワード</string>
    <string name="hint_password">半角英数字8~20文字</string>
    <string name="update_old_password">現在のパスワード</string>
    <string name="update_new_password">新しいパスワード</string>
    <string name="login_forgot_password_intro">パスワードを忘れた方はこちら</string>
    <string name="btn_login">ログイン</string>
    <string name="login_sign_up_intro">まだアカウントをお持ちでない方</string>
    <string name="btn_sign_up">新規登録</string>
    <string name="btn_sign_up_next">確認する</string>
    <string name="txt_login_term_service">登録することで、利用規約に同意したことになります</string>
    <string name="txt_login_select_building_title">建物名選択</string>
    <string name="txt_sign_up_account_exist">すでにアカウントをお持ちの方はこちら</string>
    <string name="txt_sign_up_register_code_title">入居者専用パス</string>
    <string name="txt_sign_up_register_code_hint">賃貸契約時発行パスワード</string>
    <string name="txt_sign_up_name">氏名</string>
    <string name="txt_sign_up_username">ユーザー名</string>
    <string name="txt_sign_up_phone">電話番号</string>
    <string name="txt_sign_up_birthday">生年月日</string>
    <string name="txt_sign_up_building">建物名</string>
    <string name="txt_sign_up_room">部屋番号</string>
    <string name="txt_sign_up_confirm">以下の内容で登録します</string>
    <string name="btn_sign_up_cancel">キャンセル</string>
    <string name="txt_sign_up_finish">ご登録のメールアドレスに\n認証メールをお送りしました。\nメールボックスをご確認いただき、\n登録を完了させてください。</string>
    <string name="txt_sign_up_select_building_search_hint">建物名を入力してください</string>
    <string name="txt_skill_back">戻る</string>
    <string name="txt_skill_skip">次へ</string>
    <string name="txt_skill_step_1">1</string>
    <string name="txt_skill_step_2">2</string>
    <string name="txt_skill_question">\u003F</string>
    <string name="txt_skill_a_detail">マネジメントや教育に携わっているレベル</string>
    <string name="txt_skill_b_detail">独力で業務を完遂できるレベル</string>
    <string name="txt_skill_c_detail">サポートが必要なレベル</string>
    <string name="txt_skill_intro">まずはMYスキルを入力して\nバイトやお仕事を探そう！</string>
    <string name="txt_skill_intro_new">スキルチェックを入力すると最適なお仕事の紹介が受けられます。</string>
    <string name="txt_skill_intro_new_1">※不要な方はスキップしてください</string>
    <string name="txt_skill_skill">スキルレベル</string>
    <string name="txt_skill_intro_done">チェックありがとうございます。\nさっそくはじめましょう！</string>
    <string name="txt_skill_intro_1_new">経験された業務にいずれかを選択して下さい</string>
    <string name="txt_skill_intro_2">経験したことのある業務環境や\nツール、作業を選択して下さい</string>
    <string name="txt_skill_header_company">一般事務</string>
    <string name="txt_skill_header_center">コールセンター</string>
    <string name="txt_skill_header_os">OS</string>
    <string name="txt_skill_header_word">Word</string>
    <string name="txt_skill_header_powerpoint">PowerPoint</string>
    <string name="txt_skill_header_excel">Excel</string>
    <string name="txt_skill_header_1">電話応対</string>
    <string name="txt_skill_header_2">来客対応</string>
    <string name="txt_skill_header_3">書類作成</string>
    <string name="txt_skill_header_4">ファイリング</string>
    <string name="txt_skill_header_5">備品管理</string>
    <string name="txt_skill_header_6">アウトバウンド</string>
    <string name="txt_skill_header_7">来客対応</string>
    <string name="txt_skill_header_8">マネージャー・ＳＶ</string>
    <string name="txt_skill_header_9">サービス系コールセンター</string>
    <string name="txt_skill_header_10">テクニカル系コールセンター</string>
    <string name="txt_skill_inexperience">未経験</string>
    <string name="txt_skill_1_3_years">1〜3年</string>
    <string name="txt_skill_over_3_years">3年以上</string>
    <string name="btn_next">次へ</string>
    <string name="btn_done">完了</string>
    <string name="btn_save">保存</string>
    <string name="btn_edit">編集</string>
    <string name="btn_skill_skip">スキップ</string>
    <string name="btn_skill_ok">進む</string>
    <string name="ok">OK</string>
    <string name="ok_done">はじめる</string>
    <string name="cancel">Cancel</string>
    <string name="btn_cancel">キャンセル</string>
    <string name="err_title">エラー</string>
    <string name="err_message">エラーが発生しました。もう一度試してください。</string>
    <string name="txt_header_password">パスワード再発行</string>
    <string name="txt_password_intro_1">ご登録のメールアドレスに\nパスワード再発行のリンクをお送りします。</string>
    <string name="txt_password_bottom">メールが届かない場合はこちら\nからお問合せください</string>
    <string name="txt_password_email">メールアドレス</string>
    <string name="txt_password_email_confirm">確認のため\nもう一度入力</string>
    <string name="txt_password_email_confirm_1_line">確認のためもう一度入力</string>
    <string name="txt_password_code">認証コード</string>
    <string name="btn_password_next">送信</string>
    <string name="content_description_show_password">Show Password</string>
    <string name="btn_sign_in_mikata">いえらぶIDで新規登録</string>
    <string name="txt_sign_up">新規登録</string>
    <string name="txt_login_mikata_intro">地方のミカタで登録している\nメールとパスワードを入力下さい</string>
    <string name="txt_has_mikata_account">すでにアカウントをお持ちの方はこちら</string>
</resources>