<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlt_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <ocuiparts.com.library.customView.CustomHeaderView
        android:id="@+id/rlt_header"
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:background="@color/white"
        app:dropShadow="true"
        app:left_icon_visibility="true"
        app:right_icon_visibility="false"
        app:text_color="@color/black"
        app:title_text="@string/txt_header_password"
        app:title_textSize="32px"
        app:title_visible="true"></ocuiparts.com.library.customView.CustomHeaderView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rlt_header"
        android:background="@color/lightBackground"

        android:gravity="center|top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="211px"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="125px">

                <ocuiparts.com.library.customView.CustomTextView
                    android:id="@+id/txt_intro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lineSpacingMultiplier="1.2"
                    android:lines="3"
                    android:maxLines="3"
                    android:paddingLeft="0px"
                    android:paddingRight="0px"
                    android:tag="30"
                    android:text="@string/txt_password_intro_1"
                    android:textColor="@color/gray_black"
                    android:textSize="30px"
                    android:textStyle="bold" />
            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="41px" />

            <LinearLayout
                android:id="@+id/lnl_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="112px"
                    android:layout_marginTop="43px"
                    android:background="@color/white"
                    android:paddingLeft="32px"
                    android:paddingRight="32px">

                    <ocuiparts.com.library.customView.CustomTextView
                        android:id="@+id/tv_email"
                        android:layout_width="197px"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:tag="22"
                        android:text="@string/login_email"
                        android:textColor="@color/gray_black"
                        android:textSize="22px" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ocuiparts.com.library.customEditText.EmailEditTextView
                            android:id="@+id/edt_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/transparent"
                            android:inputType="textEmailAddress"
                            android:paddingLeft="197px"
                            android:tag="26"
                            app:cursor_color="@color/colorAccent"
                            app:hint_color_et="@color/grayTextIntro"
                            app:hint_et="@string/txt_password_email"
                            app:lines="1"
                            app:max_lines="1"
                            app:placeholder_color="@color/white"
                            app:text_color_et="@color/black"
                            app:text_size_et="26px" />
                    </RelativeLayout>
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="112px"
                    android:layout_marginTop="4px"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:paddingLeft="32px"
                    android:paddingRight="32px">

                    <ocuiparts.com.library.customView.CustomTextView
                        android:id="@+id/tv_email_confirm"
                        android:layout_width="197px"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:tag="22"
                        android:text="@string/txt_password_email_confirm"
                        android:textColor="@color/gray_black"
                        android:textSize="22px" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ocuiparts.com.library.customEditText.EmailEditTextView
                            android:id="@+id/edt_email_confirm"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/transparent"
                            android:inputType="textEmailAddress"
                            android:paddingLeft="197px"
                            android:tag="26"
                            app:cursor_color="@color/colorAccent"
                            app:hint_color_et="@color/grayTextIntro"
                            app:hint_et="@string/txt_password_email_confirm_1_line"
                            app:lines="1"
                            app:max_lines="1"
                            app:placeholder_color="@color/white"
                            app:text_color_et="@color/black"
                            app:text_size_et="26px" />
                    </RelativeLayout>
                </RelativeLayout>


            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rlt_code"
                android:layout_width="match_parent"
                android:layout_height="112px"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="112px"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:paddingLeft="32px"
                    android:paddingRight="32px">

                    <ocuiparts.com.library.View.YuGothicTextView
                        android:id="@+id/txt_code_title"
                        android:layout_width="197px"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:tag="22"
                        android:text="@string/txt_password_code"
                        android:textColor="@color/gray_bold"
                        android:textSize="22px" />

                    <ocuiparts.com.library.View.YuGothicEditText
                        android:id="@+id/edt_code"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:hint="@string/txt_password_code"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:maxLines="1"
                        android:paddingLeft="197px"
                        android:tag="26"
                        android:textColor="@color/gray_black"
                        android:textColorHint="@color/gray_bold"
                        android:textSize="26px" />
                </RelativeLayout>

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/btn_show_password"
                    android:layout_width="120px"
                    android:layout_height="120px"
                    android:layout_alignParentRight="true"
                    android:background="@color/transparent"
                    android:contentDescription="@string/content_description_show_password"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:scaleType="fitXY"
                    android:stateListAnimator="@null"
                    android:visibility="gone"
                    app:srcCompat="@drawable/btn_show_password_selector" />
            </RelativeLayout>

            <ocuiparts.com.library.customButtons.CustomSubmitButton
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="120px"
                android:layout_marginLeft="32px"
                android:layout_marginRight="32px"
                android:layout_marginTop="60px"
                android:background="@drawable/background_btn"
                android:foreground="@drawable/ripple_corner"
                android:stateListAnimator="@null"
                android:tag="39"
                android:text="@string/btn_password_next"
                android:textColor="@color/white"
                android:textSize="39px"
                android:textStyle="bold" />

            <ocuiparts.com.library.View.YuGothicTextView
                android:id="@+id/txt_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60px"
                android:gravity="center"
                android:lineSpacingMultiplier="1.2"
                android:maxLines="1"
                android:paddingLeft="32px"
                android:paddingRight="32px"
                android:tag="30"
                android:text="@string/txt_password_bottom"
                android:textColor="@color/gray_bold"
                android:textSize="30px"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>
    </RelativeLayout>

    <ocuiparts.com.library.View.YuGothicEditText
        android:id="@+id/txt_save_token"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:background="@color/transparent"
        android:textColor="@color/transparent" />

    <RelativeLayout
        android:id="@+id/rlt_click_abandon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black25"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLargeInverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"></ProgressBar>
    </RelativeLayout>
</RelativeLayout>

